# fossil-lang

./: .gitignore  Cargo.toml  README.md  out.csv  results.nt  results.parquet  results.ttl
cli/: Cargo.toml
cli/src/: main.rs
docs/: book.toml  shexc.js
docs/src/: README.md  SUMMARY.md  syntax-and-semantics.md
docs/src/getting-started/: README.md  dissecting-hello-world.md  dissecting-the-basic-pipeline.md
docs/src/modules/: README.md
docs/src/standard-library/: README.md
docs/theme/: index.hbs
examples/: mvp.ikg  rdf.ikg
examples/csv/: main.rs
examples/mvp/: main.rs
lib/fossil-ifc/: Cargo.toml
lib/fossil-ifc/src/: lib.rs  schema.rs  source.rs  step.rs
lib/fossil-lang/: Cargo.toml
lib/fossil-lang/examples/: films.fossil  hello_world.rs  idea.fossil  indirect.rs  pipeline.rs  types.rs
lib/fossil-lang/src/: ast.rs  common.rs  compiler.rs  error.rs  generated.rs  lib.rs  module.rs  parser.rs  resolved.rs  suggestions.rs
lib/fossil-lang/src/ast/: ast.rs  folder.rs  hir.rs  mod.rs  thir.rs  visitor.rs
lib/fossil-lang/src/compiler/: mod.rs
lib/fossil-lang/src/context/: attributes.rs  global.rs  metadata.rs  mod.rs
lib/fossil-lang/src/ir/: convert.rs  mod.rs  resolutions.rs  resolve.rs  type_index.rs  typeck_results.rs
lib/fossil-lang/src/parser/: grammar.rs  lexer.rs
lib/fossil-lang/src/passes/: convert.rs  expand.rs  lower.rs  mod.rs  module_loader.rs  parse.rs  resolve.rs  typecheck.rs
lib/fossil-lang/src/passes/resolve/: mod.rs  resolver.rs  scope.rs  table.rs
lib/fossil-lang/src/passes/typecheck/: convert.rs  env.rs  helpers.rs  infer.rs  mod.rs  subst.rs  typeutil.rs  unify.rs
lib/fossil-lang/src/phases/: mod.rs  parse.rs  resolve.rs  typecheck.rs  typegen.rs
lib/fossil-lang/src/runtime/: chunked_executor.rs  constructor.rs  evaluator.rs  executor.rs  interpreter.rs  lazy_frame.rs  mod.rs  output.rs  storage.rs  value.rs
lib/fossil-lang/src/traits/: function.rs  mod.rs  provider.rs  source.rs  ty.rs
lib/fossil-lang/tests/: compile.rs  errors.rs  import.rs  multi_module.rs  nesting_limits.rs  pipe_operator.rs  pipeline.rs  record_constructors.rs  resolve.rs  row_polymorphism.rs  test_attributes.rs  typecheck.rs
lib/fossil-lang/tests/common/: mod.rs
lib/fossil-lsp/: Cargo.toml
lib/fossil-lsp/src/: compiler_bridge.rs  document.rs  main.rs  server.rs
lib/fossil-lsp/src/handlers/: completion.rs  diagnostics.rs  goto_definition.rs  hover.rs  inlay_hints.rs  mod.rs  semantic_tokens.rs  symbols.rs
lib/fossil-macros/: Cargo.toml
lib/fossil-macros/src/: lib.rs
lib/fossil-providers/: Cargo.toml
lib/fossil-providers/examples/csv/: data.csv  main.rs
lib/fossil-providers/examples/json/: main.rs
lib/fossil-providers/src/: cloud_options.rs  csv.rs  json.rs  lib.rs  source.rs  utils.rs
lib/fossil-providers/src/shacl/: mod.rs
lib/fossil-providers/src/shapes/: mod.rs  shex.rs
lib/fossil-providers/src/shex/: mod.rs
lib/fossil-providers/src/sql/: config.rs  connection.rs  error.rs  functions.rs  mod.rs  pushdown.rs  schema.rs  streaming.rs
lib/fossil-providers/tests/: README.md  mod.rs
lib/fossil-providers/tests/RMLTC0000-CSV/: actual.nq  mapping.fossil
lib/fossil-providers/tests/RMLTC0001a-CSV/: actual.nq  mapping.fossil
lib/fossil-providers/tests/RMLTC0001b-CSV/: mapping.fossil
lib/fossil-providers/tests/RMLTC0002a-CSV/: mapping.fossil  mod.rs
lib/fossil-providers/tests/RMLTC0002b-CSV/: mapping.fossil
lib/fossil-providers/tests/RMLTC0002c-CSV/: mapping.fossil
lib/fossil-providers/tests/RMLTC0002e-CSV/: mapping.fossil
lib/fossil-providers/tests/RMLTC0003c-CSV/: mapping.fossil
lib/fossil-providers/tests/RMLTC0004a-CSV/: mapping.fossil
lib/fossil-providers/tests/RMLTC0004b-CSV/: mapping.fossil
lib/fossil-providers/tests/RMLTC0005a-CSV/: mapping.fossil  output.nq
lib/fossil-providers/tests/common/: error.rs  mod.rs  test.rs
lib/fossil-stdlib/: Cargo.toml
lib/fossil-stdlib/examples/: serialize.rs
lib/fossil-stdlib/examples/azure/: mapping.fossil  person.shex
lib/fossil-stdlib/examples/dataframe-ops/: customers.csv  dataframe-ops.fossil  main.rs  orders.csv  results.ttl
lib/fossil-stdlib/examples/end-to-end/: end-to-end.fossil  main.rs  mapping.fossil  people.csv  person.shex  shex-provider.fossil
lib/fossil-stdlib/examples/io/: main.rs
lib/fossil-stdlib/examples/mobility/: main.rs  mapping.fossil  passenger_comfort.csv  pothole_telemetry.csv  route_efficiency.csv  weather_observations.csv
lib/fossil-stdlib/examples/mobility-azure/: main.rs  mapping-shex.fossil  mapping.fossil  urban-mobility.shex  vehicle-validation.shex
lib/fossil-stdlib/examples/several-yields/: main.rs  mapping.fossil
lib/fossil-stdlib/examples/shex-provider/: main.rs  people.csv  person.shex  shex-provider.fossil
lib/fossil-stdlib/examples/sql-ops/: main.rs  setup-db.sql  shop.db  sql-ops.fossil
lib/fossil-stdlib/examples/string-interpolation/: main.rs  people.csv  string-interpolation.fossil
lib/fossil-stdlib/src/: builtin.rs  csv.rs  entity.rs  lib.rs  list.rs  option.rs  string.rs
lib/fossil-stdlib/src/rdf/: batch_serializer.rs  metadata.rs  mod.rs  serializer.rs
lib/fossil-stdlib/src/report/: csv.rs  json.rs  mod.rs
lib/fossil-stdlib/src/string/: mod.rs
lib/fossil-stdlib/src/validate/: constraints.rs  metadata.rs  mod.rs
lib/fossil-stdlib/tests/fixtures/: people_expected.ttl
lib/ikigai-lang/: Cargo.toml
lib/ikigai-lang/examples/: hello_world.rs
lib/ikigai-lang/src/: ast.rs  checked.rs  const_eval.rs  context.rs  error.rs  function.rs  generator.rs  interner.rs  interpreter.rs  ir.rs  lib.rs  module.rs  parser.rs  provider.rs  resolved.rs  resolver.rs  solver.rs  typechecker.rs  value.rs
lib/ikigai-lang/src/traits/: function.rs  provider.rs
lib/ikigai-providers/: Cargo.toml
lib/ikigai-providers/src/: csv.rs
lib/ikigai-stdlib/: Cargo.toml
src/: ast.rs  const_eval.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  module.rs  parser.rs  solver.rs
src/functions/: mod.rs  random.rs  registry.rs
src/providers/: csv.rs  mod.rs  registry.rs
src/runtime/: builtin.rs  mod.rs  value.rs
(+8 files in other folders)
