[workspace]
members = [
    "cli",
    "lib/fossil-lang",
    "lib/fossil-providers",
    "lib/fossil-stdlib"
]
resolver = "2"

[workspace.package]
version = "0.0.1"
description = "A small language for living data"
homepage = ""
repository = ""
documentation = ""
license = ""
categories = ["database"]
keywords = [""]
authors = ["Ángel Iglesias Préstamo <angel.iglesias.prestamo@gmail.com>"]
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
# external dependencies
polars = {version = "0.51.0", features = ["lazy", "json"]}
thiserror = "2.0.17"

# internal dependencies
fossil-lang = { path = "./lib/fossil-lang" }
fossil-providers = { path = "./lib/fossil-providers" }
fossil-stdlib = { path = "./lib/fossil-stdlib" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
