[workspace]
members = [
    "cli",
    "lib/fossil-lang", "lib/fossil-macros",
    "lib/fossil-providers",
    "lib/fossil-stdlib",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
description = "A small language for living data"
homepage = ""
repository = ""
documentation = ""
license = ""
categories = ["database"]
keywords = [""]
authors = ["Ángel Iglesias Préstamo <angel.iglesias.prestamo@gmail.com>"]
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
# external dependencies
polars = {version = "0.52.0", features = ["lazy", "timezones", "new_streaming", "parquet", "concat_str", "strings"]}
tempfile = "3.13"
thiserror = "2.0.18"

# internal dependencies
fossil-lang = { path = "./lib/fossil-lang" }
fossil-macros = { path = "./lib/fossil-macros" }
fossil-providers = { path = "./lib/fossil-providers" }
fossil-stdlib = { path = "./lib/fossil-stdlib" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
