[package]
name = "cli"
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# external dependencies
thiserror.workspace = true
clap = { version = "4", features = ["derive"] }

# internal dependencies
fossil-lang = { workspace = true }
fossil-stdlib = { workspace = true }
fossil-providers = { workspace = true }
