[package]
name = "fossil-lang"
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# external dependencies
polars.workspace = true
logos = "0.15.1"
chumsky = { version= "0.11.1", features = ["pratt"]}
ariadne = "0.6.0"
