[package]
name = "fossil-providers"
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# external dependencies
polars.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "mysql", "any"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
once_cell = "1.19"
reqwest = { version = "0.12", features = ["blocking"] }

# ShEx and SHACL support (rudof project)
rudof_lib = "0.1"
shex_ast = "0.1"
shacl_ast = "0.1"
shacl_rdf = "0.1"
srdf = "0.1"
iri_s = "0.1"
prefixmap = "0.1"

# internal dependencies
fossil-lang.workspace = true
tempfile.workspace = true

[dev-dependencies]
fossil-stdlib.workspace = true

oxrdfio = "0.2.2"
tempfile.workspace = true
thiserror.workspace = true
