[package]
name = "fossil-providers"
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# external dependencies
polars.workspace = true
shex_ast = "0.1"
iri_s = "0.1"

# internal dependencies
fossil-lang.workspace = true

[dev-dependencies]
thiserror.workspace = true
oxrdfio = "0.2.2"

fossil-stdlib.workspace = true
