[package]
name = "fossil-stdlib"
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# external dependencies
polars.workspace = true
rand = "0.9.2"
once_cell = "1.20"
oxigraph = "0.5.4"

# internal dependencies
fossil-lang.workspace = true
fossil-providers.workspace = true

[dev-dependencies]
tempfile = "3.13"
