[package]
name = "fossil-stdlib"
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# external dependencies
thiserror.workspace = true
polars.workspace = true
oxrdfio = "0.2.2"
oxrdf = "0.3.2"

# internal dependencies
fossil-lang.workspace = true
fossil-macros.workspace = true
fossil-providers.workspace = true
