[package]
name = "ikigai-lang"
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# external dependencies
logos = "0.15.1"
chumsky = { version= "0.11.1", features = ["pratt"]}
polars = {version = "0.51.0", features = ["lazy"]}
rand = "0.9.2"
thiserror = "2.0.17"
indexmap = "2.12.0"

# internal dependencies
